--- a/paul-playground.ipynb
+++ b/paul-playground.ipynb
@@ -9,8 +9,8 @@
      "outputs_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:17.556396Z",
-     "start_time": "2025-03-07T18:44:17.546681Z"
+     "end_time": "2025-03-08T09:40:34.675337Z",
+     "start_time": "2025-03-08T09:40:34.634234Z"
     }
    },
    "source": [
@@ -22,15 +22,15 @@
     "from GRANDE import GRANDE"
    ],
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 78
   },
   {
    "cell_type": "code",
    "id": "3ee938ad82a04393",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:18.092169Z",
-     "start_time": "2025-03-07T18:44:17.715126Z"
+     "end_time": "2025-03-08T09:40:35.437825Z",
+     "start_time": "2025-03-08T09:40:34.961233Z"
     }
    },
    "source": [
@@ -40,15 +40,172 @@
     "df_order_articles = pd.read_parquet('data/masked_order_articles.parquet')"
    ],
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-08T09:40:52.413441Z",
+     "start_time": "2025-03-08T09:40:52.407264Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_order_articles",
+   "id": "9a22d2cda1d6277b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          warehouse_id  box_id  article_id  article_weight_in_g  web_order_id\n",
+       "0                    3     NaN        3657                17250       1250399\n",
+       "1                    3     NaN        3657                17250       1250154\n",
+       "2                   32     NaN        2576                17000       1296951\n",
+       "3                   32     NaN        3975                15100        978668\n",
+       "4                   25     NaN        3670                11000        104995\n",
+       "...                ...     ...         ...                  ...           ...\n",
+       "15586377            35     NaN        3953                17800       1533370\n",
+       "15586378            35     NaN        3953                17800       1533370\n",
+       "15586379            35     NaN        3953                17800       1533370\n",
+       "15586380            35     NaN        3953                17800       1533370\n",
+       "15586381            35     NaN        3953                17800       1533370\n",
+       "\n",
+       "[15586382 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>warehouse_id</th>\n",
+       "      <th>box_id</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>article_weight_in_g</th>\n",
+       "      <th>web_order_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3657</td>\n",
+       "      <td>17250</td>\n",
+       "      <td>1250399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3657</td>\n",
+       "      <td>17250</td>\n",
+       "      <td>1250154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2576</td>\n",
+       "      <td>17000</td>\n",
+       "      <td>1296951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3975</td>\n",
+       "      <td>15100</td>\n",
+       "      <td>978668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3670</td>\n",
+       "      <td>11000</td>\n",
+       "      <td>104995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586377</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>17800</td>\n",
+       "      <td>1533370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586378</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>17800</td>\n",
+       "      <td>1533370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586379</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>17800</td>\n",
+       "      <td>1533370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586380</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>17800</td>\n",
+       "      <td>1533370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15586381</th>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3953</td>\n",
+       "      <td>17800</td>\n",
+       "      <td>1533370</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15586382 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 85
   },
   {
    "cell_type": "code",
    "id": "988ed538b33f92a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:18.515688Z",
-     "start_time": "2025-03-07T18:44:18.093332Z"
+     "end_time": "2025-03-08T09:40:36.070748Z",
+     "start_time": "2025-03-08T09:40:35.438797Z"
     }
    },
    "source": [
@@ -59,15 +216,15 @@
     "df.drop(df.filter(regex='_y$').columns, axis=1, inplace=True)"
    ],
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 80
   },
   {
    "cell_type": "code",
    "id": "2732ab54592b5224",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:19.300331Z",
-     "start_time": "2025-03-07T18:44:18.516517Z"
+     "end_time": "2025-03-08T09:40:37.010133Z",
+     "start_time": "2025-03-08T09:40:36.074812Z"
     }
    },
    "source": [
@@ -76,15 +233,15 @@
     "df = pd.merge(df, article_total_weight, on=\"web_order_id\", how='left')"
    ],
    "outputs": [],
-   "execution_count": 65
+   "execution_count": 81
   },
   {
    "cell_type": "code",
    "id": "9a4a76e26b054aba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:19.303885Z",
-     "start_time": "2025-03-07T18:44:19.301419Z"
+     "end_time": "2025-03-08T09:40:37.013892Z",
+     "start_time": "2025-03-08T09:40:37.011083Z"
     }
    },
    "source": [
@@ -92,15 +249,15 @@
     "# df = pd.get_dummies(df, columns=[\"warehouse_id\", \"driver_id\"])"
    ],
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 82
   },
   {
    "cell_type": "code",
    "id": "cd2c34b38ea1d1e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:19.375749Z",
-     "start_time": "2025-03-07T18:44:19.306448Z"
+     "end_time": "2025-03-08T09:40:37.520381Z",
+     "start_time": "2025-03-08T09:40:37.448810Z"
     }
    },
    "source": [
@@ -108,15 +265,15 @@
     "df = df.dropna()"
    ],
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 83
   },
   {
    "cell_type": "code",
    "id": "d9b25d37675803d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-07T18:44:19.383720Z",
-     "start_time": "2025-03-07T18:44:19.376311Z"
+     "end_time": "2025-03-08T09:40:37.942612Z",
+     "start_time": "2025-03-08T09:40:37.932732Z"
     }
    },
    "source": [
@@ -434,12 +591,12 @@
        "</div>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 84
   },
   {
    "cell_type": "code",
