Add model saving functionality for multiple regression scripts

--- a/elise-distributions.ipynb
+++ b/elise-distributions.ipynb
@@ -2626,20 +2626,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "def merge_tables(df_orders, df_driver_order_mapping, df_service_times):\n",
+    "    df = pd.merge(df_orders, df_service_times, on=\"web_order_id\", how='left', suffixes=('', '_y'))\n",
+    "    df = pd.merge(df, df_driver_order_mapping, on=\"web_order_id\", how='left', suffixes=('', '_y'))\n",
+    "    df.drop(df.filter(regex='_y$').columns, axis=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "root_path_data = './data/'\n",
+    "df_order_articles = pd.read_parquet('data/masked_order_articles.parquet')\n",
+    "\n",
+    "df_orders = pd.read_parquet(os.path.join(root_path_data, \"masked_orders.parquet\"))\n",
+    "df_driver_order_mapping = pd.read_parquet(os.path.join(root_path_data, 'masked_driver_order_mapping.parquet'))\n",
+    "df_service_times = pd.read_parquet(os.path.join(root_path_data, 'masked_service_times.parquet'))\n",
+    "df_order_articles = pd.read_parquet(os.path.join(root_path_data, 'masked_order_articles.parquet'))\n",
+    "df = merge_tables(df_orders, df_driver_order_mapping, df_service_times)\n",
+    "\n",
+    "\n",
+    "# Merge box ids to orders\n",
+    "df_crate_counts = pd.merge(df, df_order_articles[['web_order_id', 'box_id']], on='web_order_id', how='left', suffixes=('', '_y'))\n",
+    "df_crate_counts.drop(df.filter(regex='_y$').columns, axis=1, inplace=True)\n",
+    "df_crate_counts = df_crate_counts[['web_order_id', 'box_id']]\n",
+    "\n",
+    "# Group by web_order_id\n",
+    "# group = df_crate_counts.groupby('web_order_id')\n",
+    "# df_crate_counts[\"crate_count\"] = group.agg({'box_id': 'nunique'}).reset_index()['box_id']\n",
+    "# df_crate_counts[\"crate_count\"] += group[\"box_id\"].transform(lambda x: x.isnull().sum())\n",
+    "# df_crate_counts = df_crate_counts[['web_order_id', 'crate_count']]\n",
+    "# # Merge duplicates\n",
+    "# df_crate_counts = df_crate_counts.drop_duplicates()\n",
+    "df_tmp = df_crate_counts.copy()\n",
+    "df_tmp['box_id'] = df_tmp['box_id'].fillna(0)\n",
+    "nan_boxes_df = df_tmp[df_tmp['box_id'] == 0]\n",
+    "drink_count = nan_boxes_df.groupby('web_order_id').count()\n",
+    "\n",
+    "df_tmp = df_crate_counts.dropna(axis=0, subset=['box_id'])\n",
+    "drink_count['food_boxes'] = df_tmp.groupby('web_order_id')['box_id'].nunique()\n",
+    "\n",
+    "drink_count = drink_count.fillna(0)\n",
+    "\n",
+    "drink_count['crate_count'] = drink_count['food_boxes'] + drink_count['box_id']\n",
+    "drink_count.drop(columns=['box_id', 'food_boxes'], inplace=True)\n",
+    "df = pd.merge(df, drink_count, on=\"web_order_id\", how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation between unique_box_counts and service_time_in_minutes: 0.5011523492538278\n"
+      "Correlation between unique_box_counts and service_time_in_minutes: 0.4672689501814519\n"
      ]
     }
    ],
    "source": [
     "# Calculate the correlation between unique_box_counts and service_time_in_minutes\n",
-    "correlation = merged_df['crate_count'].corr(merged_df['service_time_in_minutes'])\n",
+    "correlation = df['crate_count'].corr(df['service_time_in_minutes'])\n",
     "\n",
     "# Display the correlation\n",
     "print(f\"Correlation between unique_box_counts and service_time_in_minutes: {correlation}\")"
@@ -2647,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2655,17 +2707,17 @@
      "output_type": "stream",
      "text": [
       "Crate count with the highest average service time:\n",
-      "crate_count             60.0\n",
-      "average_service_time    58.5\n",
-      "Name: 51, dtype: float64\n",
+      "crate_count              72.0\n",
+      "average_service_time    132.0\n",
+      "Name: 65, dtype: float64\n",
       "\n",
       "Crate count with the lowest average service time:\n",
       "crate_count             1.000000\n",
-      "average_service_time    7.134384\n",
+      "average_service_time    5.855344\n",
       "Name: 0, dtype: float64\n",
       "\n",
       "Top 10 Crate Counts with the highest average service time:\n",
-      "[60. 45. 42. 43. 41. 44. 46. 47. 39. 37.]\n",
+      "[72. 62. 56. 58. 65. 67. 60. 45. 55. 42.]\n",
       "\n",
       "Top 10 Crate Counts with the lowest average service time:\n",
       "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
@@ -2674,7 +2726,7 @@
    ],
    "source": [
     "# Calculate the average service time in minutes for each crate_count\n",
-    "crate_service_time_avg = merged_df.groupby('crate_count')['service_time_in_minutes'].mean().reset_index()\n",
+    "crate_service_time_avg = df.groupby('crate_count')['service_time_in_minutes'].mean().reset_index()\n",
     "\n",
     "# Rename the columns for clarity\n",
     "crate_service_time_avg.columns = ['crate_count', 'average_service_time']\n",
@@ -2708,94 +2760,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[15.  8. 25.  4.  6.  5.  7. 12. 19.  2. 16.  9. 11.  3. nan  1. 13. 10.\n",
-      " 17. 14. 21. 18. 23. 28. 20. 22. 30. 26. 24. 29. 37. 27. 32. 40. 35. 33.\n",
-      " 38. 34. 36. 39. 45. 50. 31. 42. 49. 46. 41. 44. 43. 48. 47. 52. 60.]\n"
+      "[10. 14.  8. nan  4.  5.  7. 29.  2.  9.  6. 34. 17.  3. 16. 30. 19. 25.\n",
+      " 15. 12. 45. 22. 11. 13. 49. 37. 42. 18. 21. 20. 26. 24.  1. 36. 27. 44.\n",
+      " 23. 47. 40. 43. 32. 50. 64. 35. 28. 33. 38. 39. 31. 41. 48. 57. 52. 51.\n",
+      " 46. 56. 55. 54. 59. 58. 62. 67. 53. 65. 60. 63. 72.]\n"
      ]
     }
    ],
    "source": [
-    "unique_crate_counts = merged_df['crate_count'].unique()\n",
+    "unique_crate_counts = df['crate_count'].unique()\n",
     "print(unique_crate_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average service time over all unique web_order_ids: 9.419347879899702\n",
+      "Average service time over all unique web_order_ids: 9.419257222563656\n",
       "\n",
       "Top 10 Crate Counts with the greatest MAE:\n",
-      "    crate_count        mae\n",
-      "51         60.0  49.080652\n",
-      "44         45.0  36.382855\n",
-      "41         42.0  35.814337\n",
-      "40         41.0  32.767838\n",
-      "42         43.0  32.675068\n",
-      "43         44.0  31.905470\n",
-      "45         46.0  30.323533\n",
-      "46         47.0  29.024272\n",
-      "38         39.0  27.661530\n",
-      "36         37.0  27.470297\n",
-      "34         35.0  27.019865\n",
-      "37         38.0  26.302408\n",
-      "39         40.0  25.719496\n",
-      "49         50.0  24.841725\n",
-      "47         48.0  24.298952\n",
-      "35         36.0  23.814387\n",
-      "32         33.0  23.351222\n",
-      "33         34.0  22.584608\n",
-      "30         31.0  22.239418\n",
-      "50         52.0  22.080652\n",
-      "31         32.0  21.479074\n",
-      "48         49.0  21.212576\n",
-      "27         28.0  20.614696\n",
-      "29         30.0  20.334020\n",
-      "28         29.0  20.089370\n",
-      "26         27.0  19.680288\n",
-      "25         26.0  17.654500\n",
-      "22         23.0  17.308900\n",
-      "24         25.0  17.277805\n",
-      "23         24.0  16.545366\n",
+      "    crate_count         mae\n",
+      "65         72.0  122.580743\n",
+      "60         62.0   76.914076\n",
+      "55         56.0   68.725187\n",
+      "57         58.0   61.580743\n",
+      "63         65.0   59.580743\n",
+      "64         67.0   45.264076\n",
+      "59         60.0   38.289076\n",
+      "44         45.0   33.938223\n",
+      "54         55.0   33.547409\n",
+      "41         42.0   33.300566\n",
+      "45         46.0   32.698346\n",
+      "42         43.0   30.563272\n",
+      "37         38.0   29.627193\n",
+      "43         44.0   29.113656\n",
+      "53         54.0   28.290371\n",
+      "52         53.0   28.172409\n",
+      "48         49.0   27.116573\n",
+      "46         47.0   26.978849\n",
+      "38         39.0   25.916786\n",
+      "51         52.0   25.795973\n",
+      "36         37.0   25.612184\n",
+      "47         48.0   25.488059\n",
+      "49         50.0   25.063172\n",
+      "40         41.0   24.963879\n",
+      "35         36.0   24.937516\n",
+      "61         63.0   24.797409\n",
+      "58         59.0   24.339076\n",
+      "34         35.0   24.059633\n",
+      "33         34.0   22.951803\n",
+      "62         64.0   22.080743\n",
+      "30         31.0   21.756912\n",
+      "31         32.0   21.682184\n",
+      "39         40.0   20.941189\n",
+      "27         28.0   20.275427\n",
+      "32         33.0   19.970175\n",
+      "28         29.0   19.371130\n",
+      "56         57.0   18.119631\n",
+      "26         27.0   18.077674\n",
+      "29         30.0   17.733246\n",
+      "24         25.0   16.244521\n",
       "\n",
       "Top 10 Crate Counts with the lowest MAE:\n",
       "   crate_count       mae\n",
-      "2          3.0  3.604113\n",
-      "1          2.0  3.643269\n",
-      "3          4.0  3.674348\n",
-      "4          5.0  3.825872\n",
-      "0          1.0  3.972579\n",
-      "5          6.0  4.252437\n",
-      "6          7.0  4.693246\n",
-      "7          8.0  5.178862\n",
-      "8          9.0  5.637459\n",
-      "9         10.0  6.125675\n"
+      "4          5.0  3.423966\n",
+      "3          4.0  3.436905\n",
+      "2          3.0  3.705868\n",
+      "5          6.0  3.743313\n",
+      "6          7.0  4.173500\n",
+      "1          2.0  4.268298\n",
+      "7          8.0  4.614825\n",
+      "0          1.0  4.920634\n",
+      "8          9.0  5.178617\n",
+      "9         10.0  5.604792\n"
      ]
     }
    ],
    "source": [
     "# Calculate the average service time over all unique web_order_ids\n",
-    "average_service_time_overall = merged_df.groupby('web_order_id')['service_time_in_minutes'].first().mean()\n",
+    "average_service_time_overall = df.groupby('web_order_id')['service_time_in_minutes'].first().mean()\n",
     "print(f\"Average service time over all unique web_order_ids: {average_service_time_overall}\")\n",
     "\n",
     "# Calculate the MAE for each crate count\n",
-    "crate_mae = merged_df.groupby('crate_count')['service_time_in_minutes'].apply(lambda x: (x - average_service_time_overall).abs().mean()).reset_index()\n",
+    "crate_mae = df.groupby('crate_count')['service_time_in_minutes'].apply(lambda x: (x - average_service_time_overall).abs().mean()).reset_index()\n",
     "crate_mae.columns = ['crate_count', 'mae']\n",
     "\n",
     "# Get the top 10 crate counts with the greatest MAE\n",
-    "top_10_highest_mae_crates = crate_mae.nlargest(30, 'mae')\n",
+    "top_10_highest_mae_crates = crate_mae.nlargest(40, 'mae')\n",
     "print(\"\\nTop 10 Crate Counts with the greatest MAE:\")\n",
     "print(top_10_highest_mae_crates)\n",
     "\n",
@@ -2840,7 +2903,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from _1_Preprocessing import run_preprocessing\n",
+    "\n",
+    "df_train, df_test = run_preprocessing()"
+   ]
   },
   {
    "cell_type": "code",
